# pt-loader

./: .gitignore  Cargo.toml  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
python/model_converter/: __init__.pyi
python/pt_loader/: __init__.py  __init__.pyi
python/tests/: test_api.py
samples/: yolo26n.yaml
src/: extract.rs  iohash.rs  lib.rs  main.rs  metadata.rs  parser.rs  python.rs  types.rs  writer.rs
tests/: extract_sample.rs  limits.rs  numpy_scalar_regression.rs
