[package]
name = "model-converter"
version = "0.1.0"
edition = "2021"
description = "Safe parser-based PyTorch checkpoint converter to safetensors"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.11"
zip = { version = "8", default-features = false, features = ["deflate"] }

[dev-dependencies]
safetensors = "0.7"
tempfile = "3"
