[package]
name = "pt-loader"
version = "0.1.2"
edition = "2021"
description = "Safe parser-based PyTorch checkpoint converter to safetensors"
license = "MIT"
exclude = [".github/**", "samples/**", "python/**", "pyproject.toml"]
readme = "README.md"
repository = "https://github.com/a-gradient/pt-loader"
homepage = "https://github.com/a-gradient/pt-loader"
documentation = "https://docs.rs/pt-loader"
keywords = ["pytorch", "safetensors", "checkpoint", "converter"]
categories = ["parser-implementations", "science"]

[lib]
name = "pt_loader"
crate-type = ["rlib", "cdylib"]

[features]
default = []
pyo3 = ["dep:pyo3"]

[dependencies]
ndarray = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.11"
zip = { version = "8", default-features = false, features = ["deflate"] }
pyo3 = { version = "0.28.3", optional = true, features = ["extension-module", "abi3-py38"] }

[dev-dependencies]
safetensors = "0.7"
tempfile = "3"
