[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "pt-safe-loader"
version = "0.1.2"
description = "Safe parser-based PyTorch checkpoint converter to safetensors"
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy>=1.24"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/a-gradient/pt-loader"
Repository = "https://github.com/a-gradient/pt-loader"
Issues = "https://github.com/a-gradient/pt-loader/issues"

[tool.maturin]
features = ["pyo3"]
module-name = "pt_loader._core"
python-source = "python"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
]
